--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(hello_world VERSION 0.1.0 LANGUAGES C CXX)
+project(intern-sandbox VERSION 0.1.0 LANGUAGES C CXX)
 
 add_executable(hello_world hello_world.cpp)
+add_executable(power_led power_led.cpp)
 
 include(CTest)
 enable_testing()
